fix:删除weather相关代码
